--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,7 @@
-@import 'base/*.scss';
-@import 'global/*.scss';
-@import '**/_*.scss';
-@import '../components/**/*.scss';
+// @import 'base/*.scss';
+// @import 'global/*.scss';
+// @import '**/_*.scss';
+// @import '../components/**/*.scss';
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400&display=swap');
 
 body {
