--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,4 @@
-// @import 'base/*.scss';
-// @import 'global/*.scss';
-// @import '**/_*.scss';
-// @import '../components/**/*.scss';
+@import '../components/**/*.scss';
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400&display=swap');
 
 body {
@@ -19,6 +16,9 @@ body {
   display: none;
 }
 
+.img{
+  width: 500px;
+}
 
 .navbar {
   box-shadow: 0px 5px 10px 0px #aaa;
