--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,4 @@
-@import '../components/**/*.scss';
+// @import '../components/**/*.scss';
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400&display=swap');
 
 body {
