added features.html and style.css

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,420 +1,123 @@
-// @import '../components/**/*.scss';
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@400;700&display=swap');
 
 body {
-  font-family: 'M PLUS 1p', sans-serif;
+  font-family: 'Lato', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   color: #011312;
 }
 
-.contact__container {
-  padding: 120px 0;
+a {
+  text-decoration: none;
+  outline: 0;
 }
 
-
-.navbar input[type="checkbox"],
-.navbar .hamburger-lines {
-  display: none;
+.features__container{
+  max-width: 375px;
+  margin: 80px auto 120px;
+  text-align: center;
 }
 
-.img{
-  width: 500px;
+.features__title{
+  color: #635C73;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 36px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 27px;
 }
 
-.navbar {
-  box-shadow: 0px 5px 10px 0px #aaa;
-  position: fixed;
-  width: 100%;
-  background: #fff;
-  color: #000;
-  opacity: 0.85;
-  height: 50px;
-  z-index: 12;
-
-  &-container {
-    display: flex;
-    justify-content: space-between;
-    height: 64px;
-    align-items: center;
-  }
+.features__text{
+  color: #323232;
+  font-family: 'Lato', sans-serif;
+  font-size: 19px;
+  font-weight: 400;
+  margin: 0;
 }
 
-
-
-
-.menu-items {
-  order: 2;
+.features__buttons{
+  width: 290px;
   display: flex;
-  align-content: flex-start;
+  row-gap: 10px;
+  flex-wrap: wrap;
   justify-content: space-around;
-  align-items: stretch;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  width: 100%;
+  margin: 36px auto 120px;
+}
 
-  & li {
-    list-style: none;
-    margin-left: 1.5rem;
-    margin-bottom: 0.5rem;
-    font-size: 1.2rem;
+.button__content {
+  overflow: hidden;
+  font-family: "Segoe UI",sans-serif;
+  font-size: 0;
+
+  & .btn, .button__count{
+    padding: 6px 10px;
+    display: inline-flex;
+    font-size: 14px;
+    color: #24292f;
+    font-weight: 600;
+    vertical-align: bottom;
+    cursor: pointer;
+    border: 1px solid;
+    background-color: #ebf0f4;
+    border-color: #ccd1d5; 
+    border-color: rgba(31,35,40,.15);
+    border-radius: 0.25em 0 0 0.25em;
+    line-height: 16px;
+  }
+  
+  & .button__count {
+    color: #24292f;
+    background-color: #fff;
+    border-left: 0;
+    border-radius: 0 0.25em 0.25em 0;
+    border-color: rgba(31,35,40,.15);
   }
 
-  & a {
-    text-decoration: none;
-    color: #444;
-    font-weight: 500;
-    transition: color 0.3s ease-in-out;
-
-    :hover {
-      color: #117964;
-      transition: color 0.3s ease-in-out;
-    }
+  & span{
+    padding-left: 5px;
   }
 }
 
-
-@media screen and (max-width: 477px) {
-  .contact__container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 320px;
-    margin: 40px auto 0;
-  }
-
-  .contact__title {
-    font-weight: 300;
-    padding-bottom: 25px;
-  }
-
-  .contact__text {
-    color: #3E4B4B;
-    font-weight: 400;
-    line-height: 20px;
-  }
-
-  .contuct__wowText {
-    display: none;
-  }
-
-  .form {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 100%;
-    margin: 30px 0;
-  }
-
-  .form__text {
-    font-style: normal;
-    font-weight: 400;
-    line-height: 20px;
-    padding-bottom: 8px;
-  }
-
-  .form__input {
-    border: 1px solid #E7E7E7;
-    padding: 16px 8px;
-    width: 100%;
-    margin-bottom: 16px;
-  }
-
-  .form__message {
-    padding-bottom: 64px;
-  }
-
-  ::placeholder {
-    color: #A0A7A7;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 20px;
-  }
-
-  .form__btn {
-    color: #FFF;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 400;
-    padding: 16px 64px;
-    background: #008F7D;
-    border: none;
-    width: 186px;
-    margin: 0 auto;
-    margin-top: 16px;
-  }
-}
-
-
-@media screen and (min-width: 478px) {
-  .contact__container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 688px;
-    margin: 0 auto;
-  }
-
-  .contact__title {
-    font-weight: 300;
-    padding-bottom: 25px;
-  }
-
-  .contact__main {
-    display: flex;
-    gap: 31px;
-    flex-direction: row-reverse;
-  }
-
-  .contact__text {
-    color: #3E4B4B;
-    font-weight: 400;
-    line-height: 20px;
-    width: 330px;
-
-  }
-
-  .contuct__wowText {
-    width: 270px;
-    color: #3E4B4B;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    padding-bottom: 25px;
-  }
-
-  .form {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 330px;
-  }
-
-  .form__text {
-    font-style: normal;
-    font-weight: 400;
-    line-height: 20px;
-    padding-bottom: 8px;
-  }
-
-  .form__input {
-    border: 1px solid #E7E7E7;
-    padding: 16px 8px;
-    width: 100%;
-    margin-bottom: 16px;
-  }
-
-  .form__message {
-    padding-bottom: 64px;
-  }
-
-  ::placeholder {
-    color: #A0A7A7;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 20px;
-  }
-
-  .form__btn {
-    color: #FFF;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 400;
-    padding: 16px 64px;
-    background: #008F7D;
-    border: none;
-    width: 186px;
-    margin: 0 auto;
-    margin-top: 16px;
-  }
+.feature__content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Montserrat", sans-serif;
 
 }
 
-@media screen and (min-width: 1190px) {
-  .contact__container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 960px;
-    margin: 0 auto;
-  }
-
-  .contact__title {
-    font-weight: 300;
-    padding-bottom: 25px;
-  }
-
-  .contact__main {
-    display: flex;
-    gap: 120px;
-    flex-direction: row-reverse;
-  }
-
-  .contact__text {
-    color: #3E4B4B;
-    font-weight: 400;
-    line-height: 20px;
-    width: 370px;
-
-  }
-
-  .contuct__wowText {
-    width: 100%;
-    color: #3E4B4B;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    padding-bottom: 25px;
-  }
-
-  .form {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 470px;
-  }
-
-  .form__text {
-    font-style: normal;
-    font-weight: 400;
-    line-height: 20px;
-    padding-bottom: 8px;
-  }
-
-  .form__input {
-    border: 1px solid #E7E7E7;
-    padding: 16px 8px;
-    width: 100%;
-    margin-bottom: 16px;
-  }
-
-  .form__message {
-    padding-bottom: 64px;
-  }
-
-  ::placeholder {
-    color: #A0A7A7;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 20px;
-  }
-
-  .form__btn {
-    color: #FFF;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 400;
-    padding: 16px 64px;
-    background: #008F7D;
-    border: none;
-    width: 186px;
-    margin: 0 auto;
-    margin-top: 16px;
-  }
+.features__title2{
+  color: #8D81AC;
+  text-align: center;
+  font-size: 43px;
+  font-style: normal;
+  font-weight: 700;
+  margin: 0;
+  margin-bottom: 36px;
 }
 
+.feature__content-title{
+  color: #323232;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  margin: 0;
+  margin-top: 27px;
+}
 
+.feature__content-text{
+  color: #848E97;
+  text-align: center;
+  font-family: "Lato", sans-serif;
+  font-size: 19px;
+  font-style: normal;
+  font-weight: 400;
+  margin: 14px 0 39px;
+}
 
-@media screen and (max-width: 767px) {
-  .navbar {
-    box-shadow: none;
-
-    &-container {
-      height: max-content;
-
-    }
-  }
-
-  .menu-items {
-    flex-direction: column;
-    opacity: 0;
-    transform: translate(80%, -20%);
-    transition: 1.25s all ease-in-out;
-  }
-
-  .navbar-container input[type="checkbox"] {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    width: 50px;
-    height: 30px;
-    opacity: 0;
-    z-index: 1;
-  }
-
-  .navbar-container input[type="checkbox"],
-  .navbar-container .hamburger-lines {
-    display: flex;
-  }
-
-  .hamburger-lines {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 50px;
-    height: 30px;
-
-    & .line {
-      display: block;
-      width: 100%;
-      height: 4px;
-      background-color: grey;
-      transition: .25s ease-in-out;
-    }
-
-    & .line1 {
-      top: 0px;
-      transform-origin: left center;
-    }
-
-    & .line2 {
-      top: 50%;
-      transform: translateY(-50%);
-      transform-origin: left center;
-    }
-
-    & .line3 {
-      top: 100%;
-      transform-origin: left center;
-      transform: translateY(-100%);
-    }
-  }
-
-  .navbar-container input[type="checkbox"]:checked~.menu-items {
-    display: flex;
-    width: 60%;
-    z-index: -1;
-    background-color: yellow;
-    padding: 25px 0;
-    transform: translate(100%, 0%);
-    opacity: 1;
-  }
-
-  .navbar-container input[type="checkbox"]:checked~.hamburger-lines {
-
-    & .line2 {
-      display: none;
-    }
-
-    & .line1 {
-      position: absolute;
-      transform: rotate(45deg);
-      top: -5px;
-      left: 5px;
-    }
-
-    & .line3 {
-      position: absolute;
-      transform: rotate(-45deg);
-      top: 29px;
-      left: 5px;
-    }
-  }
+.feature__photo{
+  margin: 12px 0 6px;
+  float: right;
 }
