--- a/src/components/page-blocks/_features.html
+++ b/src/components/page-blocks/_features.html
@@ -23,7 +23,7 @@
 					</path>
 				</svg>
 				<span>Star</span></a>
-			<a class="button__count" href="#">21,083</a>
+			<a class="button__count">21,083</a>
 		</div>
 		<div class="button__content">
 			<a class="btn" href="#"><svg viewBox="0 0 16 16" width="16" height="16" class="octicon octicon-repo-forked"
@@ -41,7 +41,7 @@
 
 		<h2 class="features__title2">
 
-			< Here is what you get>
+			&ltHere is what you get>
 		</h2>
 		<div class="feature__left">
 
