--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,420 +1,337 @@
-@import '../components/**/*.scss';
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400&display=swap');
+// @import '../components/**/*.scss';
+// @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400&display=swap');
 
-body {
-  font-family: 'M PLUS 1p', sans-serif;
-  color: #011312;
+ul, li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
-.contact__container {
-  padding: 120px 0;
+a {
+  text-decoration: none; /* Убираем подчеркивание ссылок */
 }
 
-
-.navbar input[type="checkbox"],
-.navbar .hamburger-lines {
-  display: none;
+*{
+  margin: 0;
+  padding: 0;
 }
 
-.img{
-  width: 500px;
+#menu__toggle {
+  opacity: 0;
+  position: absolute;
+  right: 30px;
+}
+
+/* Стили для header */
+.header {
+  min-width: 1200px;
+  background-image: url('../img/backgraund/header_bg.png');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  max-width: 100vw;
+  height: 100vh;
 }
 
 .navbar {
-  box-shadow: 0px 5px 10px 0px #aaa;
-  position: fixed;
-  width: 100%;
-  background: #fff;
-  color: #000;
-  opacity: 0.85;
-  height: 50px;
-  z-index: 12;
-
-  &-container {
-    display: flex;
-    justify-content: space-between;
-    height: 64px;
-    align-items: center;
-  }
-}
-
-
-
-
-.menu-items {
-  order: 2;
+  padding-top: 31px;
   display: flex;
-  align-content: flex-start;
   justify-content: space-around;
-  align-items: stretch;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  width: 100%;
-
-  & li {
-    list-style: none;
-    margin-left: 1.5rem;
-    margin-bottom: 0.5rem;
-    font-size: 1.2rem;
-  }
-
-  & a {
-    text-decoration: none;
-    color: #444;
-    font-weight: 500;
-    transition: color 0.3s ease-in-out;
-
-    :hover {
-      color: #117964;
-      transition: color 0.3s ease-in-out;
-    }
-  }
+  text-align: center;
+  align-items: center;
+}
+.header_logo {
+  display: flex;
+  align-items: center;
+}
+.hamburger-menu {
+  display: flex;
+}
+.header_logo h2 {
+  padding-left: 20px;
+  font-family: Lato;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 16px;
+  color: rgba(141, 129, 172, 1);
 }
 
-
-@media screen and (max-width: 477px) {
-  .contact__container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 320px;
-    margin: 40px auto 0;
-  }
-
-  .contact__title {
-    font-weight: 300;
-    padding-bottom: 25px;
-  }
-
-  .contact__text {
-    color: #3E4B4B;
-    font-weight: 400;
-    line-height: 20px;
-  }
-
-  .contuct__wowText {
-    display: none;
-  }
-
-  .form {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 100%;
-    margin: 30px 0;
-  }
-
-  .form__text {
-    font-style: normal;
-    font-weight: 400;
-    line-height: 20px;
-    padding-bottom: 8px;
-  }
-
-  .form__input {
-    border: 1px solid #E7E7E7;
-    padding: 16px 8px;
-    width: 100%;
-    margin-bottom: 16px;
-  }
-
-  .form__message {
-    padding-bottom: 64px;
-  }
-
-  ::placeholder {
-    color: #A0A7A7;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 20px;
-  }
-
-  .form__btn {
-    color: #FFF;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 400;
-    padding: 16px 64px;
-    background: #008F7D;
-    border: none;
-    width: 186px;
-    margin: 0 auto;
-    margin-top: 16px;
-  }
+/* Стили для меню */
+.menu-items {
+  display: flex;
+  text-align: center;
+  align-items: center;
 }
 
+.menu-items li {
+  padding: 0 30px;
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 16px;
+  color: rgba(141, 129, 172, 1);
+}
 
-@media screen and (min-width: 478px) {
-  .contact__container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 688px;
-    margin: 0 auto;
-  }
+.header-button{
+  list-style: none;
+  width: 145px;
+  height: 38px;
+  background: rgba(141, 129, 172, 1);
+  border: none;
+  border-radius: 30px;
+  color: white;
+  cursor: pointer;
+}
 
-  .contact__title {
-    font-weight: 300;
-    padding-bottom: 25px;
-  }
+// fork app
+.fork-up > h1,
+.fork-up > h2,
+.fork-up > p {
+  margin: 0; /* Убираем отступы сверху и снизу между текстовыми элементами */
+}
 
-  .contact__main {
-    display: flex;
-    gap: 31px;
-    flex-direction: row-reverse;
-  }
+.fork-up {
+  padding-top: 8%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+}
 
-  .contact__text {
-    color: #3E4B4B;
-    font-weight: 400;
-    line-height: 20px;
-    width: 330px;
+.fork-up > h1 {
+  font-family: Montserrat;
+  font-size: 72px;
+  font-weight: 700;
+  line-height: 72px;
+  color: rgba(255, 255, 255, 1);
+}
 
-  }
-
-  .contuct__wowText {
-    width: 270px;
-    color: #3E4B4B;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    padding-bottom: 25px;
-  }
-
-  .form {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 330px;
-  }
-
-  .form__text {
-    font-style: normal;
-    font-weight: 400;
-    line-height: 20px;
-    padding-bottom: 8px;
-  }
-
-  .form__input {
-    border: 1px solid #E7E7E7;
-    padding: 16px 8px;
-    width: 100%;
-    margin-bottom: 16px;
-  }
-
-  .form__message {
-    padding-bottom: 64px;
-  }
-
-  ::placeholder {
-    color: #A0A7A7;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 20px;
-  }
-
-  .form__btn {
-    color: #FFF;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 400;
-    padding: 16px 64px;
-    background: #008F7D;
-    border: none;
-    width: 186px;
-    margin: 0 auto;
-    margin-top: 16px;
-  }
+.fork-up > h2 {
+  padding-top: 12px;
+  font-family: Lato;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 24px;
+  color: rgba(141, 129, 172, 1);
 
 }
 
-@media screen and (min-width: 1190px) {
-  .contact__container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 960px;
-    margin: 0 auto;
-  }
+.fork-up > p {
+  padding-top: 25px;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 14px;
+  color: rgba(132, 142, 151, 0.4);
 
-  .contact__title {
-    font-weight: 300;
-    padding-bottom: 25px;
-  }
-
-  .contact__main {
-    display: flex;
-    gap: 120px;
-    flex-direction: row-reverse;
-  }
-
-  .contact__text {
-    color: #3E4B4B;
-    font-weight: 400;
-    line-height: 20px;
-    width: 370px;
-
-  }
-
-  .contuct__wowText {
-    width: 100%;
-    color: #3E4B4B;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    padding-bottom: 25px;
-  }
-
-  .form {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 470px;
-  }
-
-  .form__text {
-    font-style: normal;
-    font-weight: 400;
-    line-height: 20px;
-    padding-bottom: 8px;
-  }
-
-  .form__input {
-    border: 1px solid #E7E7E7;
-    padding: 16px 8px;
-    width: 100%;
-    margin-bottom: 16px;
-  }
-
-  .form__message {
-    padding-bottom: 64px;
-  }
-
-  ::placeholder {
-    color: #A0A7A7;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 20px;
-  }
-
-  .form__btn {
-    color: #FFF;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 400;
-    padding: 16px 64px;
-    background: #008F7D;
-    border: none;
-    width: 186px;
-    margin: 0 auto;
-    margin-top: 16px;
-  }
+}
+.bottom-donwload {
+  list-style: none;
+  width: 360px;
+  height: 62px;
+  background: rgba(141, 129, 172, 1);
+  border: none;
+  border-radius: 30px;
+  color: white;
+  font-family: Montserrat;
+  font-size: 21px;
+  font-weight: 700;
+  line-height: 22px;
+  letter-spacing: 0px;
+  text-align: center;
+  position: absolute;
+  bottom: -8px; // потом тут просто поменять и все 
+  left: 50%;
+  transform: translateX(-50%);
+  cursor: pointer;
 }
 
-
-
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 320px) {
   .navbar {
-    box-shadow: none;
-
-    &-container {
-      height: max-content;
-
-    }
-  }
-
-  .menu-items {
-    flex-direction: column;
-    opacity: 0;
-    transform: translate(80%, -20%);
-    transition: 1.25s all ease-in-out;
-  }
-
-  .navbar-container input[type="checkbox"] {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    width: 50px;
-    height: 30px;
-    opacity: 0;
-    z-index: 1;
-  }
-
-  .navbar-container input[type="checkbox"],
-  .navbar-container .hamburger-lines {
+    background: rgba(39, 38, 42, 1);
+    width: 320px;
+    height: 60px;
     display: flex;
-  }
-
-  .hamburger-lines {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    display: flex;
-    flex-direction: column;
+    align-items: center;
     justify-content: space-between;
-    width: 50px;
-    height: 30px;
-
-    & .line {
-      display: block;
-      width: 100%;
-      height: 4px;
-      background-color: grey;
-      transition: .25s ease-in-out;
-    }
-
-    & .line1 {
-      top: 0px;
-      transform-origin: left center;
-    }
-
-    & .line2 {
-      top: 50%;
-      transform: translateY(-50%);
-      transform-origin: left center;
-    }
-
-    & .line3 {
-      top: 100%;
-      transform-origin: left center;
-      transform: translateY(-100%);
-    }
+    z-index: 5;
   }
 
-  .navbar-container input[type="checkbox"]:checked~.menu-items {
+  .header_logo {
+    margin: 15px;
+    margin-bottom: 30px;
+  }
+  .header_logo h2 {
+    display: none; /* Скроем текст "ForkIO" */
+  }
+
+  .navbar-container {
     display: flex;
-    width: 60%;
-    z-index: -1;
-    background-color: yellow;
-    padding: 25px 0;
-    transform: translate(100%, 0%);
-    opacity: 1;
+    justify-content: flex-start;
+    align-items: center; /* Добавляем выравнивание по вертикали */
   }
 
-  .navbar-container input[type="checkbox"]:checked~.hamburger-lines {
-
-    & .line2 {
-      display: none;
-    }
-
-    & .line1 {
-      position: absolute;
-      transform: rotate(45deg);
-      top: -5px;
-      left: 5px;
-    }
-
-    & .line3 {
-      position: absolute;
-      transform: rotate(-45deg);
-      top: 29px;
-      left: 5px;
-    }
+  .menu-items > li > a {
+    color: rgba(255, 255, 255, 1);
   }
+
+  .header-button {
+    display: block;
+    width: 119px;
+    height: 37px;
+    background: #8d81ac;
+    position: absolute;
+    top: 35px;
+    left: 31%;
+    cursor: pointer;
+  }
+  // fork app
+  .fork-up {
+    position: relative;
+    right: 38%;
+  }
+  .fork-up h1 {
+  font-family: Montserrat;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 48px;
+  text-align: center;
+  }
+
+  .fork-up h2 {
+    font-family: Montserrat;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: center;
+  color: rgba(141, 129, 172, 1);
+  width: 200px;
+  }
+
+  .fork-up p {
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 14px;
+  text-align: center;
+  }
+
+
+  // гамбургер
+  .menu__btn {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top: 38px;
+    right: 9%;
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+    z-index: 2;
+  }
+  
+  .menu__btn > span,
+  .menu__btn > span::before,
+  .menu__btn > span::after {
+    display: block;
+    position: absolute;
+    height: 3px;
+    background-color: white;
+    transition-duration: 0.25s;
+  }
+  .menu__btn > span::after,
+  .menu__btn > span {
+    width: 26px;
+  }
+
+  .menu__btn > span::before {
+    width: 13px;
+    left: 13px;
+  }
+  .menu__btn > span::before {
+    content: '';
+    top: -8px;
+  }
+  
+  .menu__btn > span::after {
+    content: '';
+    top: 8px;
+  }
+  
+  .menu-items {
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    top: -378px; /* Начальное значение - выше экрана */
+    left: 10px; /* Добавляем отступ слева */
+    right: 10px; /* Добавляем отступ справа */
+    width: calc(100% - 30px); /* Вычисляем ширину с учетом отступов */
+    height: 250px;
+    list-style: none;
+    background: rgba(51, 51, 51, 1);
+    box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
+    transition-duration: 0.25s;
+    overflow-y: auto; /* Добавим скролл, если содержимое больше размеров блока */
+    z-index: 2;
+  }
+  
+  .menu-items > li {
+    display: block;
+    padding: 12px 24px;
+    color: rgba(255, 255, 255, 1);
+    font-family: 'Roboto', sans-serif;
+    font-size: 26px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0px;
+    text-align: left;
+    transition-duration: 0.25s;
+    border-bottom: 1px solid white;
+  }
+
+  .menu-items > li:first-child {
+    border-left: 8px solid rgba(141, 129, 172, 1);
+    color: rgba(141, 129, 172, 1); /* Установить первый пункт как активный по умолчанию */
+  }
+
+  .menu-items > li:active {
+    color: rgba(141, 129, 172, 1);
+    border-left: 8px solid rgba(141, 129, 172, 1);
+    padding-right: 20px;
+  }
+  
+  #menu__toggle {
+    opacity: 0;
+  }
+  
+  #menu__toggle:checked ~ .menu__btn > span {
+    transform: rotate(45deg);
+  }
+  
+  #menu__toggle:checked ~ .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0);
+  }
+  
+  #menu__toggle:checked ~ .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+  
+  #menu__toggle:checked ~ .menu-items {
+    visibility: visible;
+    top: 91px; /* Показываем плашку с верху */
+  }
+  
+
+  // кнопка внизу
+  .bottom-donwload {
+    width: 290px;
+    height: 45px;
+    border-radius: 40px;
+    margin-left: -8px;
+    cursor: pointer;
+  } 
 }
+
