--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -63,7 +63,7 @@ a {
   align-items: center;
 }
 
-.menu-items li {
+.menu-items li > a {
   padding: 0 30px;
   font-family: Lato;
   font-size: 16px;
@@ -147,10 +147,10 @@ a {
   cursor: pointer;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 480px) {
   .navbar {
     background: rgba(39, 38, 42, 1);
-    width: 320px;
+    width: 480px;
     height: 60px;
     display: flex;
     align-items: center;
@@ -183,40 +183,39 @@ a {
     background: #8d81ac;
     position: absolute;
     top: 35px;
-    left: 31%;
+    left: 35%;
     cursor: pointer;
   }
   // fork app
   .fork-up {
-    position: relative;
-    right: 38%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -179%);
+    text-align: center;
   }
   .fork-up h1 {
-  font-family: Montserrat;
-  font-size: 48px;
-  font-weight: 700;
-  line-height: 48px;
-  text-align: center;
+    font-family: Montserrat;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 48px;
   }
-
+  
   .fork-up h2 {
     font-family: Montserrat;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 24px;
-  text-align: center;
-  color: rgba(141, 129, 172, 1);
-  width: 200px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+    color: rgba(141, 129, 172, 1);
+    width: 200px;
   }
-
+  
   .fork-up p {
-  font-family: Montserrat;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 14px;
-  text-align: center;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 14px;
   }
-
 
   // гамбургер
   .menu__btn {
@@ -264,10 +263,10 @@ a {
     position: fixed;
     visibility: hidden;
     top: -378px; /* Начальное значение - выше экрана */
-    left: 10px; /* Добавляем отступ слева */
-    right: 10px; /* Добавляем отступ справа */
-    width: calc(100% - 30px); /* Вычисляем ширину с учетом отступов */
-    height: 250px;
+    left: 30px; /* Добавляем отступ слева */
+    right: 20px; /* Добавляем отступ справа */
+    width: calc(100% - 80px); /* Вычисляем ширину с учетом отступов */
+    height: 220px;
     list-style: none;
     background: rgba(51, 51, 51, 1);
     box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
@@ -287,7 +286,7 @@ a {
     letter-spacing: 0px;
     text-align: left;
     transition-duration: 0.25s;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid gray;
   }
 
   .menu-items > li:first-child {
