--- a/src/components/page-blocks/_header.html
+++ b/src/components/page-blocks/_header.html
@@ -20,7 +20,7 @@
             <span></span>
           </label>
         <ul class="menu-items">
-          <li><a href="#">Overview</a></li>
+          <li class="active" ><a href="#">Overview</a></li>
           <li><a href="#">About Fork</a></li>
           <li><a href="#">Buying Options</a></li>
           <li><a href="#">Support</a></li> 
