--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,16 @@
 // @import '../components/**/*.scss';
 // @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400&display=swap');
 
+@font-face {
+  font-family: Montserrat ;
+  src: url("../fonts/Montserrat-VariableFont_wght.ttf");
+}
+
+@font-face {
+  font-family: Lato;
+  src: url("../fonts/Lato-Italic.ttf");
+}
+
 ul, li {
   margin: 0;
   padding: 0;
@@ -29,8 +39,10 @@ a {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  align-items: flex-start;
   max-width: 100vw;
   height: 100vh;
+  
 }
 
 .navbar {
@@ -47,7 +59,7 @@ a {
 .hamburger-menu {
   display: flex;
 }
-.header_logo h2 {
+.header_logo h2 > a {
   padding-left: 20px;
   font-family: Lato;
   font-size: 24px;
@@ -145,6 +157,19 @@ a {
   left: 50%;
   transform: translateX(-50%);
   cursor: pointer;
+}
+
+.unlimited-p {
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 15px;
+  text-align: center;  
+  color: rgba(132, 142, 151, 0.5);
+  position: absolute;
+  bottom: -55px; // потом тут просто поменять и все 
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 @media screen and (max-width: 480px) {
@@ -257,6 +282,9 @@ a {
     content: '';
     top: 8px;
   }
+  .unlimited-p {
+    width: 200px;
+  }
   
   .menu-items {
     display: block;
@@ -346,3 +374,92 @@ a {
 
 // 760
 
+@media screen and (min-width: 481px) and (max-width: 992px) {
+  .navbar {
+    background: rgba(39, 38, 42, 1);
+    width: 992px;
+    height: 70px;
+    flex-direction: column;
+  }
+
+  .menu-items {
+    position: absolute;
+    top: 7%;
+    left: 22%;
+  }
+
+  .menu-items > li > a {
+    padding: 25px;
+  }
+
+  .header-button {
+    width: 145px;
+    height: 38px;
+    position: absolute;
+    top: 2%;
+    right: 2%;
+  }
+
+  .header_logo {
+    position: absolute;
+    top: 2%;
+    left: 5%;
+  }
+
+  .fork-up {
+    position: absolute;
+    left: 25%;
+  }
+  .fork-up > h1 { 
+  font-size: 72px;
+  font-weight: 700;
+  line-height: 72px;
+  }
+  .fork-up > h2 {
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 24px;
+
+  }
+}
+
+// hover 
+
+.menu-items > li > a:hover {
+  transition: 350ms;
+  color: rgba(255, 255, 255, 1);
+}
+
+.header-button:hover,
+.bottom-donwload:hover {
+  transition: 350ms;
+  border: 1px solid rgba(141, 129, 172, 1);
+  background: rgba(255, 255, 255, 1);
+  color: rgba(141, 129, 172, 1);
+}
+
+.header_logo > h2 > a:hover {
+  transition: 350ms;
+  color: rgba(255, 255, 255, 1);
+}
+
+.header_logo a:hover svg {
+  fill: white; /* Желаемый цвет при наведении */
+}
+
+@media screen and (min-width: 993px) and (max-width: 1200px) {
+  .navbar {
+    position: relative;
+    right: 5%;
+  }
+
+  .menu-items {
+    position: relative;
+    right: 10%;
+  }
+
+  .header-button {
+    position: relative;
+    right: 10%;
+  }
+}
