--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -153,7 +153,7 @@ a {
   letter-spacing: 0px;
   text-align: center;
   position: absolute;
-  bottom: -8px; // потом тут просто поменять и все 
+  bottom: -30px; // потом тут просто поменять и все 
   left: 50%;
   transform: translateX(-50%);
   cursor: pointer;
@@ -462,4 +462,127 @@ a {
     position: relative;
     right: 10%;
   }
+}
+
+// People Are Talking About Fork ----------------------------------------
+
+.people-talking {
+  padding-top: 85px;
+  min-width: 1200px;
+  background-image: url('../img/backgraund/people_bg.png');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  max-width: 100vw;
+  height: 100vh;
+}
+
+.people-talking > h2 {
+  font-family: Montserrat;
+  font-size: 42px;
+  font-weight: 700;
+  line-height: 44px;
+  text-align: center;
+  color: rgba(255, 255, 255, 1);
+}
+
+.grid-people-talking {
+  margin-top: 150px;
+  display: grid;
+  grid-template-columns: repeat(3, 315px);
+  justify-content: center; /* Центрирование по горизонтали */
+  gap: 130px;
+}
+
+.grid-item {
+  text-align: center;
+  width: 100%; 
+  max-width: 315px; 
+  margin: 0 auto;
+}
+
+.grid-item > p {
+  padding-top: 15px;
+  font-family: Lato;
+  font-size: 16px;
+  font-style: italic;
+  font-weight: 700;
+  line-height: 24px;
+  text-align: center;
+  color: rgba(255, 255, 255, 1);
+
+
+}
+
+.people-bottom-paragpaph { 
+  font-family: Lato;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  color: rgba(162, 145, 165, 0.4);
+  padding-top: 150px;
+  padding-bottom: 20px;
+  width: 880px;
+  border-bottom: 1px solid rgba(100, 87, 102, 0.5);
+  text-align: center;
+  margin: 0 auto;
+
+}
+
+@media screen and (min-width: 481px) and (max-width: 992px) { 
+  .grid-people-talking {
+    grid-template-columns: repeat(2, 415px);
+    grid-gap: 20px 10px;
+  }
+
+  .people-talking > h2 {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 567px;
+  }
+
+  .people-bottom-paragpaph {
+    position: absolute;
+    left: 50%;
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+    max-width: 704px;
+  }
+  .pihel {
+    padding-top: 37px;
+  }
+}
+
+@media screen and (max-width:480px) {
+  .people-talking {
+    height: 100%;
+  }
+  .grid-people-talking {
+    grid-template-columns: repeat(1, 287px);
+    grid-gap: 20px ;
+    padding-top: 50px;
+    justify-content: start;
+    margin-left: 1%;
+  }
+
+  .people-talking > h2 { 
+  font-family: Montserrat;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 48px;
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translate(-54%,-5%);
+  }
+
+  .people-bottom-paragpaph {
+    padding: 0;
+    margin: 4%;
+    width: 251px;
+    border-bottom: 1px solid rgba(100, 87, 102, 0.5);
+
+  }
+
 }
