--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -263,6 +263,7 @@ a {
     height: 3px;
     background-color: white;
     transition-duration: 0.25s;
+    border-radius: 6px;
   }
   .menu__btn > span::after,
   .menu__btn > span {
@@ -290,17 +291,17 @@ a {
     display: block;
     position: fixed;
     visibility: hidden;
-    top: -378px;
-    left: 35px;
+    top: 91px;
+    left: 100%;
     right: 20px;
     width: calc(100% - 80px);
     height: 220px;
     list-style: none;
     background: rgba(51, 51, 51, 1);
     box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
-    transition-duration: 0.25s;
+    transition-duration: 0.45s;
     overflow-y: auto;
-    z-index: 2;
+    z-index: 1;
   }
   
   .menu-items > li {
@@ -313,7 +314,7 @@ a {
     line-height: 26px;
     letter-spacing: 0px;
     text-align: left;
-    transition: 0.25s;
+    transition: 0.45s;
     border-bottom: 1px solid gray;
     cursor: pointer;
   }
@@ -358,7 +359,8 @@ a {
   
   #menu__toggle:checked ~ .menu-items {
     visibility: visible;
-    top: 91px; /* Показываем плашку с верху */
+    top: 91px;
+    left: 39px; 
   }
   
 
