--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,3 @@
-// @import '../components/**/*.scss';
-// @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400&display=swap');
-
 @font-face {
   font-family: Montserrat ;
   src: url("../fonts/Montserrat-VariableFont_wght.ttf");
@@ -34,7 +31,7 @@ a {
 
 /* Стили для header */
 .header {
-  min-width: 1200px;
+  // width: 1200px; 
   background-image: url('../img/backgraund/header_bg.png');
   background-size: cover;
   background-position: center;
@@ -58,6 +55,8 @@ a {
 }
 .hamburger-menu {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .header_logo h2 > a {
   padding-left: 20px;
@@ -172,20 +171,15 @@ a {
   transform: translateX(-50%);
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 759px) {
   .navbar {
     background: rgba(39, 38, 42, 1);
-    width: 480px;
     height: 60px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     z-index: 5;
-  }
-
-  .header_logo {
-    margin: 15px;
-    margin-bottom: 30px;
+    padding: 31px 30px 0px;
   }
   .header_logo h2 {
     display: none; /* Скроем текст "ForkIO" */
@@ -193,8 +187,10 @@ a {
 
   .navbar-container {
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
     align-items: center; /* Добавляем выравнивание по вертикали */
+    width: 100%;
+
   }
 
   .menu-items > li > a {
@@ -206,9 +202,6 @@ a {
     width: 119px;
     height: 37px;
     background: #8d81ac;
-    position: absolute;
-    top: 35px;
-    left: 35%;
     cursor: pointer;
   }
   // fork app
@@ -246,9 +239,6 @@ a {
   .menu__btn {
     display: flex;
     align-items: center;
-    position: absolute;
-    top: 38px;
-    right: 9%;
     width: 26px;
     height: 26px;
     cursor: pointer;
@@ -291,8 +281,8 @@ a {
     display: block;
     position: fixed;
     visibility: hidden;
-    top: 91px;
-    left: 100%;
+    top: -378px;
+    left: 37px;
     right: 20px;
     width: calc(100% - 80px);
     height: 220px;
@@ -360,7 +350,6 @@ a {
   #menu__toggle:checked ~ .menu-items {
     visibility: visible;
     top: 91px;
-    left: 39px; 
   }
   
 
@@ -376,22 +365,20 @@ a {
 
 // 760
 
-@media screen and (min-width: 481px) and (max-width: 992px) {
+@media screen and (min-width: 760px) and (max-width: 1200px) {
   .navbar {
     background: rgba(39, 38, 42, 1);
-    width: 992px;
     height: 70px;
     flex-direction: column;
   }
 
   .menu-items {
-    position: absolute;
-    top: 7%;
-    left: 22%;
+    margin: 0 auto;
+    padding-top: 21px;
   }
 
-  .menu-items > li > a {
-    padding: 25px;
+  .menu-items > li  {
+    padding-left: 25px;
   }
 
   .header-button {
@@ -409,8 +396,8 @@ a {
   }
 
   .fork-up {
-    position: absolute;
-    left: 25%;
+    margin: 0 auto;
+    width: 601px;
   }
   .fork-up > h1 { 
   font-size: 72px;
@@ -446,31 +433,15 @@ a {
 }
 
 .header_logo a:hover svg {
-  fill: white; /* Желаемый цвет при наведении */
+  fill: white; 
 }
 
-@media screen and (min-width: 993px) and (max-width: 1200px) {
-  .navbar {
-    position: relative;
-    right: 5%;
-  }
 
-  .menu-items {
-    position: relative;
-    right: 10%;
-  }
-
-  .header-button {
-    position: relative;
-    right: 10%;
-  }
-}
 
 // People Are Talking About Fork ----------------------------------------
 
 .people-talking {
   padding-top: 85px;
-  min-width: 1200px;
   background-image: url('../img/backgraund/people_bg.png');
   background-size: cover;
   background-position: center;
@@ -486,13 +457,13 @@ a {
   line-height: 44px;
   text-align: center;
   color: rgba(255, 255, 255, 1);
+  margin-bottom: 60px;
 }
 
 .grid-people-talking {
-  margin-top: 150px;
   display: grid;
-  grid-template-columns: repeat(3, 315px);
-  justify-content: center; /* Центрирование по горизонтали */
+  grid-template-columns: repeat(3, 255px);
+  justify-content: center; 
   gap: 130px;
 }
 
@@ -531,59 +502,50 @@ a {
 
 }
 
-@media screen and (min-width: 481px) and (max-width: 992px) { 
+@media screen and (min-width: 727px) and (max-width: 1200px) { 
   .grid-people-talking {
-    grid-template-columns: repeat(2, 415px);
-    grid-gap: 20px 10px;
+    grid-template-columns: repeat(2, 255px);
+    gap: 50px 200px;
   }
 
   .people-talking > h2 {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 567px;
+    margin: 0 auto;
+    width: 568px;
+    margin-bottom: 60px;
   }
 
   .people-bottom-paragpaph {
-    position: absolute;
-    left: 50%;
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%);
-    max-width: 704px;
+    width: 600px;
+    margin: 0 auto;
   }
   .pihel {
     padding-top: 37px;
   }
 }
 
-@media screen and (max-width:480px) {
+@media screen and (max-width:727px) {
   .people-talking {
     height: 100%;
   }
   .grid-people-talking {
-    grid-template-columns: repeat(1, 287px);
+    grid-template-columns: repeat(1, 255px);
     grid-gap: 20px ;
     padding-top: 50px;
-    justify-content: start;
-    margin-left: 1%;
   }
 
   .people-talking > h2 { 
-  font-family: Montserrat;
-  font-size: 32px;
-  font-weight: 700;
-  line-height: 48px;
-  text-align: center;
-  position: absolute;
-  left: 50%;
-  -webkit-transform: translate(-54%,-5%);
+    font-family: Montserrat;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 48px;
+    text-align: center;
+    margin: 0 auto;
+    width: 251px;
   }
 
   .people-bottom-paragpaph {
-    padding: 0;
-    margin: 4%;
-    width: 251px;
     border-bottom: 1px solid rgba(100, 87, 102, 0.5);
+    max-width: 251px;
 
   }
 
