--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -60,7 +60,7 @@ a {
 }
 .header_logo h2 > a {
   padding-left: 20px;
-  font-family: Lato;
+  font-family: 'Montserrat', sans-serif;
   font-size: 24px;
   font-weight: 700;
   line-height: 16px;
@@ -145,7 +145,7 @@ a {
   border: none;
   border-radius: 30px;
   color: white;
-  font-family: Montserrat;
+  font-family: 'Montserrat', sans-serif;
   font-size: 21px;
   font-weight: 700;
   line-height: 22px;
@@ -187,12 +187,14 @@ a {
 
   .navbar-container {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center; /* Добавляем выравнивание по вертикали */
     width: 100%;
 
   }
-
+  .hamburger-menu {
+    width: 145px;
+  }
   .menu-items > li > a {
     color: rgba(255, 255, 255, 1);
   }
@@ -206,30 +208,26 @@ a {
   }
   // fork app
   .fork-up {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -179%);
-    text-align: center;
+    margin: 0 auto;
   }
   .fork-up h1 {
-    font-family: Montserrat;
+    font-family: 'Montserrat', sans-serif;
     font-size: 48px;
     font-weight: 700;
     line-height: 48px;
   }
   
   .fork-up h2 {
-    font-family: Montserrat;
+    font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 24px;
     color: rgba(141, 129, 172, 1);
-    width: 200px;
+    width: 291px;
   }
   
   .fork-up p {
-    font-family: Montserrat;
+    font-family: 'Montserrat', sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 14px;
@@ -243,6 +241,8 @@ a {
     height: 26px;
     cursor: pointer;
     z-index: 2;
+    position: absolute;
+    right: 30px;
   }
   
   .menu__btn > span,
@@ -291,7 +291,7 @@ a {
     box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
     transition-duration: 0.45s;
     overflow-y: auto;
-    z-index: 1;
+    z-index: 7;
   }
   
   .menu-items > li {
@@ -358,7 +358,6 @@ a {
     width: 290px;
     height: 45px;
     border-radius: 40px;
-    margin-left: -8px;
     cursor: pointer;
   } 
 }
@@ -451,7 +450,7 @@ a {
 }
 
 .people-talking > h2 {
-  font-family: Montserrat;
+  font-family: 'Montserrat', sans-serif;
   font-size: 42px;
   font-weight: 700;
   line-height: 44px;
@@ -517,6 +516,7 @@ a {
   .people-bottom-paragpaph {
     width: 600px;
     margin: 0 auto;
+    padding-top: 60px;
   }
   .pihel {
     padding-top: 37px;
