--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -123,6 +123,7 @@ a {
 .fork-up > h2,
 .fork-up > p {
   margin: 0; 
+}
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@400;700&display=swap');
 
 html, body {
