--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -561,6 +561,10 @@ ul, li {
     transform: translateX(-50%);
   }
 
+  .people-talking{
+    margin-top: 15px;
+  }
+
   // grid
   .grid-people-talking {
     display: grid;
